# vibecoded-commoncrawletl

./: .gitignore  Cargo.toml  USAGE.md  VM_SPEC.md  download.sh  resume.md  setup.sh
src/: atomic.rs  checkpoint.rs  cli.rs  error.rs  lib.rs  main.rs  progress.rs
src/domain/: mod.rs  scoring.rs  signals.rs
src/extract/: entity.rs  event.rs  mod.rs  types.rs
src/geo/: constants.rs  filter.rs  mod.rs  types.rs
src/nquads/: parser.rs  types.rs
src/output/: generate.rs
src/parts/: mod.rs  prioritize.rs
